Revert "XIVY-16853 package IAR the new way (#758)"
This reverts commit ca9e0acde574f9b343713e7e8e815b769ec6e217.